cupt (2.10.1~) UNRELEASED; urgency=medium

  * test:
    - t/manage/worker/packages/hooks/pre-install-pkgs/feeding-input.t:
      Increased hang-check timeout from 30s to 90s, giving more time to
      HPPA buildds. Thanks to John David Anglin for the investigation and
      Aaron M. Ucko for the report. (Closes: #882238)
  * lib:
    - system/resolver:
      - New class 'ImplicitReason'.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 30 Mar 2018 20:08:30 +0200

cupt (2.10.0) unstable; urgency=low

  * console:
    - New positional action override option '--reinstall'.
    - Action preview prompt: removed printing "(a)" suffix for removed/purged
      automatically installed packages. Instead, introduced all-action
      package indicators: "{m}" for manually installed packages, "{a}" for
      automatically installed ones. Those 2 affect only non-color output mode.
      Only "{m}" is enabled by default.
    - Action preview prompt: fixed an internal error on showing versions for
      to-be-purged removed packages.
    - Action preview prompt: warn (by default) when removing important
      packages (the ones marked as 'Important: yes').
    - Action preview prompt: fixed showing broken installed packages as to
      be reinstalled if an user prevented their automatic
      removal/reinstallation.
    - Package action modifier suffixes '+' and '-' are now deprecated.
      They still work (for now) but produce a warning when used.
    - 'shell':
      - Don't rebuild the cache when the last action required less cache
        parts than the current one, but all needed parts were loaded before.
      - Don't rebuild the cache if simulation is on.
      - Replaced argument parsing algorithm from a shell invocation to a
        simple word parser (simple one-level shell quotes still allowed).
      - 'version' and 'help' commands now work also here.
    - 'dist-upgrade':
      - Do not apply positional arguments on the first stage (when upgrading